--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
    
       <div>
       <p id="Zeichen" class="Zahl">Hallo</p>
-      <br />
+      <a href="info.html" class="link-button"> Info </a>
+     
     </div>
+
+    
+ 
   </body>
 </html>
